Python Çalışma Defteri 1.bölüm görevleri tamamlandı.

--- a/BBY162_Python_a_Giris.ipynb
+++ b/BBY162_Python_a_Giris.ipynb
@@ -150,13 +150,25 @@
       "cell_type": "code",
       "metadata": {
         "id": "CBHkVbIlUXgW",
-        "cellView": "both"
+        "cellView": "both",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2d214dc0-13a4-4807-9fa5-257b64ce1b5b"
       },
       "source": [
-        "print()"
+        "print(\"Hello, World! I came.\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Hello, World! I came.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -189,7 +201,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZjHL-qoEd7Bj"
+        "id": "ZjHL-qoEd7Bj",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "80f9a0cf-f47e-44ec-e089-c9f90979af14"
       },
       "source": [
         "# Örnek uygulamayı çalıştır\n",
@@ -199,8 +215,17 @@
         "print(\"Merhaba!\")  # yorumlar kod satırının devamında da yapılabilir.\n",
         "# print(\"Bu kod geçici olarak devre dışı bırakılmıştır.\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "# bu bir yorum değildir\n",
+            "Merhaba!\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -214,14 +239,26 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "QzUppEjoXLPM"
+        "id": "QzUppEjoXLPM",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0f1c22b0-54bf-4b8b-e8e9-913d0d3b0538"
       },
       "source": [
-        "print(\"Bu satırın devamına bir yorum ekleyin\")\n",
-        "print(\"Bu satırı devre dışı bırakın!\")"
+        "print(\"# Python için ilk yorumum.\")\n",
+        "#print(\"Seni devre dışı bırakmalıyım.\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "# Python için ilk yorumum.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
