Metin Katarlarına kadar tüm görevler bitirildi.

--- a/BBY162_Python_a_Giris.ipynb
+++ b/BBY162_Python_a_Giris.ipynb
@@ -159,7 +159,7 @@
       "source": [
         "print(\"Hello, World! I came.\")"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -215,7 +215,7 @@
         "print(\"Merhaba!\")  # yorumlar kod satırının devamında da yapılabilir.\n",
         "# print(\"Bu kod geçici olarak devre dışı bırakılmıştır.\")"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -243,13 +243,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0f1c22b0-54bf-4b8b-e8e9-913d0d3b0538"
+        "outputId": "4c8b945f-880b-43f1-ba57-84a3a031b797"
       },
       "source": [
         "print(\"# Python için ilk yorumum.\")\n",
         "#print(\"Seni devre dışı bırakmalıyım.\")"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -345,7 +345,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4iU4Hw7wjNzk"
+        "id": "4iU4Hw7wjNzk",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7914978e-c048-457c-cc6b-d68e2db93438"
       },
       "source": [
         "# Örnek uygulamayı çalıştır\n",
@@ -354,7 +358,15 @@
         "print(\"Adı Soyadı: \" + adSoyad)"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Adı Soyadı: Orçun Madran\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -368,13 +380,26 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "RmIa5BJsZ2EI"
+        "id": "RmIa5BJsZ2EI",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8e96a509-314d-4ce3-bd69-aaa824f70df6"
       },
       "source": [
-        "# Ekrana e-posta yazdır\n"
+        "ePosta = \"songulartan@hotmail.com\"\n",
+        "print(\"E-Posta:\" + ePosta)\n"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "E-Posta:songulartan@hotmail.com\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -423,14 +448,26 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1W14OfkxeGuN"
+        "id": "1W14OfkxeGuN",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c87d76a2-90ec-408f-bac1-b76ed92b430c"
       },
       "source": [
         "degisken1 = \"Veri\"\n",
-        "print(degisken2)"
+        "print(degisken1)"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Veri\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -444,14 +481,26 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JrNUlQAyeqHQ"
+        "id": "JrNUlQAyeqHQ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e41d870a-1ee6-45af-8848-527d6ff73d32"
       },
       "source": [
         "degisken3 = 'Yeni veri'\n",
-        "print()"
+        "print(degisken3)"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Yeni veri\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -485,7 +534,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Vzg4x_inkN9h"
+        "id": "Vzg4x_inkN9h",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c47ea198-3ffc-48d2-ec0a-fb7d13dd4283"
       },
       "source": [
         "# Örnek uygulamayı çalıştır\n",
@@ -494,10 +547,19 @@
         "print(type(tamSayi))\n",
         "\n",
         "ondalikSayi = 7.4\n",
-        "print(type(ondalikSayi)"
+        "print(type(ondalikSayi))"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<class 'int'>\n",
+            "<class 'float'>\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -512,13 +574,26 @@
       "cell_type": "code",
       "metadata": {
         "id": "UrGfF38CgjdQ",
-        "cellView": "both"
+        "cellView": "both",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "afd8f07d-daac-4f21-fd3f-849fbfb94525"
       },
       "source": [
-        "sayi = 9.0\n"
+        "ondalikSayi = 9.0\n",
+        "print(type(ondalikSayi))"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<class 'float'>\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -597,13 +672,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "o9ZQ6Jr3lL6A"
+        "id": "o9ZQ6Jr3lL6A",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "322030b1-ec59-41d5-b7e6-c362739b1713"
       },
       "source": [
-        "sayi = 3.14\n"
+        "sayi = 3.14\n",
+        "sayi = int(sayi)\n",
+        "print(type(sayi))\n",
+        "print(sayi)"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<class 'int'>\n",
+            "3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -661,7 +752,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "zdOXer1klJVQ"
+        "id": "zdOXer1klJVQ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1e593c48-1b56-4a47-84af-d74efd148d92"
       },
       "source": [
         "# Örnek uygulamayı çalıştır\n",
@@ -697,7 +792,20 @@
         "print(sonuc)"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "10.5\n",
+            "165\n",
+            "440\n",
+            "10.0\n",
+            "27000\n",
+            "3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -711,17 +819,46 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "oMY_MZjmndQj"
+        "id": "oMY_MZjmndQj",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "168c46e0-816c-4e27-f626-acc29295984a"
       },
       "source": [
         "urunAdi = \"Bisiklet\"\n",
         "urunBedeliAvro = 850\n",
         "pariteAvroTL = 7\n",
         "urunAdet = 3\n",
-        "pesinAdetIndirimTL = 500"
+        "pesinAdetIndirimTL = 500\n",
+        "\n",
+        "sayi = 850\n",
+        "sonuc = sayi * 7\n",
+        "print(\"Bisiklet:\" +str(int(sonuc))) #Tl türünden ürün bedeli\n",
+        "\n",
+        "sayi = 5950\n",
+        "sonuc = sayi * 3\n",
+        "print(\"3 adet bisiklet: \" +str(int(sonuc))) \n",
+        "\n",
+        "sayi = 17850\n",
+        "sonuc = sayi - 1500    # Peşin  satın alma toplam indirim\n",
+        "print(\"Bisiklet peşin satın alınma bedeli Tl :\" +str(int(sonuc)))\n",
+        "\n",
+        "\n",
+        "\n"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Bisiklet:5950\n",
+            "3 adet bisiklet: 17850\n",
+            "Bisiklet peşin satın alınma bedeli Tl :16350\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -755,7 +892,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "p281janglpzz"
+        "id": "p281janglpzz",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8a60f98d-c3c4-43c7-be31-cb00bf1ea127"
       },
       "source": [
         "# Örnek uygulama çalıştır\n",
@@ -768,7 +909,16 @@
         "print(\"Sayı = \" + str(sayi))"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "12\n",
+            "Sayı = 6\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -782,13 +932,31 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ro0-FwgDpCkx"
+        "id": "ro0-FwgDpCkx",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "473e2195-c735-49ee-b0da-2b79715164c1"
       },
       "source": [
-        "sayi = 55"
+        "sayi = 55\r\n",
+        "sayi +=20\r\n",
+        "print(sayi)\r\n",
+        "\r\n",
+        "sayi -=10\r\n",
+        "print(\"Sayı=\" +str(sayi))"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "75\n",
+            "Sayı=65\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -854,14 +1022,28 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ihVP2eQpttpv"
+        "id": "ihVP2eQpttpv",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b40bf6be-fc87-4d63-8da9-c54a373b1352"
       },
       "source": [
         "sifre = \"Python2020\"\n",
-        "sifreTekrar = \"Piton2020\""
+        "sifreTekrar = \"Piton2020\"\n",
+        "eşitMi =(sifre == sifreTekrar )\n",
+        "print(eşitMi)"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "False\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -894,7 +1076,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "NXpmIY32mwsY"
+        "id": "NXpmIY32mwsY",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7b1fe974-83d4-4f6e-c778-0f617b58ec03"
       },
       "source": [
         "# Örnek uygulama çalıştır\n",
@@ -906,7 +1092,15 @@
         "print(deger1 < deger2 < deger3)"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "True\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -920,7 +1114,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "chsHnUn9vWDA"
+        "id": "chsHnUn9vWDA",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "25024418-fc83-4b43-a1aa-a9188a4666c5"
       },
       "source": [
         "urunAdi = \"Bisiklet\"\n",
@@ -928,10 +1126,39 @@
         "kurAvro = 7\n",
         "urunAdet = 3\n",
         "pesinAdetIndirimTL = 500\n",
-        "butce = 15000"
+        "butce = 15000\n",
+        "\n",
+        "sayi = 850\n",
+        "sonuc = sayi*7\n",
+        "print(\"BisikletTlfiyatı: \"+str(int(sonuc))) # Bisiklet Tl bedeli\n",
+        "\n",
+        "sayi = 5950\n",
+        "sonuc = sayi*3\n",
+        "print(\"ToplamTlBedeli: \"+str(int(sonuc))) # 3 adet ürün Tl bedeli\n",
+        "\n",
+        "sayi = 17850\n",
+        "sonuc = sayi - 1500 # 3 ürün toplamında yapılan indirim\n",
+        "print(\"ToplamİndirimliBedeli :\" +str(int(sonuc)))\n",
+        "\n",
+        "\n",
+        "butce = 15000\n",
+        "satınAlmaBedeli = 16350\n",
+        "print(satınAlmaBedeli < butce)\n",
+        "\n"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "BisikletTlfiyatı: 5950\n",
+            "ToplamTlBedeli: 17850\n",
+            "ToplamİndirimliBedeli :16350\n",
+            "False\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
