--- a/BBY162_Python_a_Giris.ipynb
+++ b/BBY162_Python_a_Giris.ipynb
@@ -939,11 +939,11 @@
         "outputId": "473e2195-c735-49ee-b0da-2b79715164c1"
       },
       "source": [
-        "sayi = 55\r\n",
-        "sayi +=20\r\n",
-        "print(sayi)\r\n",
-        "\r\n",
-        "sayi -=10\r\n",
+        "sayi = 55\n",
+        "sayi +=20\n",
+        "print(sayi)\n",
+        "\n",
+        "sayi -=10\n",
         "print(\"Sayı=\" +str(sayi))"
       ],
       "execution_count": null,
@@ -1213,7 +1213,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-kLiOIo7Ku-F"
+        "id": "-kLiOIo7Ku-F",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "57d56c95-73e6-4893-f862-1bf327e798e0"
       },
       "source": [
         "# Örnek uygulamayı çalışıtır\n",
@@ -1224,8 +1228,16 @@
         "selamlama = deger1 + \" \" + deger2\n",
         "print(selamlama)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Merhaba Dünya\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1239,17 +1251,34 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xyNs9VEFOHJc"
+        "id": "xyNs9VEFOHJc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8ed5c3f7-aff8-4e58-9f80-7cf8e276baaa"
       },
       "source": [
         "hitap = \"Öğr. Gör.\"\n",
         "ad = \"Orçun\"\n",
         "soyad = \"Madran\"\n",
         "\n",
-        "# Çıktı: Öğr. Gör. Orçun Madran"
+        "# Çıktı: Öğr. Gör. Orçun Madran\n",
+        "Değer1 = \"Öğr. Gör.\"\n",
+        "Değer2 = \"Orçun\"\n",
+        "Değer3 = \"Madran\"\n",
+        "çıktı = Değer1 + \" \" + Değer2 + \" \" + Değer3\n",
+        "print(çıktı)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Öğr. Gör. Orçun Madran\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1304,15 +1333,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "j_CdqS1bPHAb"
+        "id": "j_CdqS1bPHAb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2d74b7e9-32ad-4218-cc07-b719125a1db9"
       },
       "source": [
         "metin = \"Hadi! \"\n",
+        "metniCarp = metin * 21\n",
+        "print(metniCarp)\n",
         "\n",
         "# Çıktı: Hadi! Hadi! Hadi! Hadi! ... Hadi!"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Hadi! Hadi! Hadi! Hadi! Hadi! Hadi! Hadi! Hadi! Hadi! Hadi! Hadi! Hadi! Hadi! Hadi! Hadi! Hadi! Hadi! Hadi! Hadi! Hadi! Hadi! \n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1341,7 +1384,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "S7c1TXGlL3XI"
+        "id": "S7c1TXGlL3XI",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b1ea6f49-3351-4718-f239-5637cb8c6239"
       },
       "source": [
         "# örnek uygulama çalıştır\n",
@@ -1349,8 +1396,16 @@
         "metin = \"Python Programlama Dili\"\n",
         "print(\"'h' harfini yakala: \" + metin[3])"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "'h' harfini yakala: h\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1364,15 +1419,28 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "dHJ48v5WQe4c"
+        "id": "dHJ48v5WQe4c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e15e55c9-d94e-4b3a-a8c1-72358a51db48"
       },
       "source": [
         "metin = \"Python Programlama Dili\"\n",
+        "print(\"'P' harfini yakala: \" + metin[7])\n",
         "\n",
         "# Çıktı: P"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "'P' harfini yakala: P\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1403,7 +1471,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_iG5JXqmM96K"
+        "id": "_iG5JXqmM96K",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2840b973-bcbe-4cb8-e98f-452827e6aa8f"
       },
       "source": [
         "# Örnek uygulama çalıştır\n",
@@ -1412,8 +1484,16 @@
         "dHarfi = metin[-4]\n",
         "print(dHarfi)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "D\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1427,15 +1507,28 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "d49Cfw-FRJMT"
+        "id": "d49Cfw-FRJMT",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ca884edb-28b1-42af-804d-d722f453fa72"
       },
       "source": [
         "metin = \"Python Programlama Dili\"\n",
-        "\n",
+        "iHarfi = metin [-1]\n",
+        "print(iHarfi)\n",
         "#Çıktı: i"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "i\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1474,7 +1567,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "UDTKDiPeNh_a"
+        "id": "UDTKDiPeNh_a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a44be7ec-4502-4a87-b968-c4143dc9f4e8"
       },
       "source": [
         "# Örnek uygulama çalıştır\n",
@@ -1486,8 +1583,17 @@
         "metin = \"Python Programlama Dili\" \n",
         "print(metin[7:])"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Python\n",
+            "Programlama Dili\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1501,18 +1607,41 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "bHxs-WnaSKie"
+        "id": "bHxs-WnaSKie",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "cbe7af98-ad6b-457a-a952-57351a7b9657"
       },
       "source": [
         "metin = \"Python Programlama Dili\" \n",
+        "dilimle = metin[:6]\n",
+        "print(dilimle)\n",
         "\n",
+        "metin = \"Python Programlama Dili\"\n",
+        "dilimle = metin[7:19]\n",
+        "print(dilimle)\n",
+        "\n",
+        "metin = \"Python Programlama Dili\"\n",
+        "dilimle = metin[19:23]\n",
+        "print(dilimle)\n",
         "# Çıktı:\n",
         "# Python\n",
         "# Programlama\n",
-        "# Dili"
+        "# Dili\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Python\n",
+            "Programlama \n",
+            "Dili\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1551,13 +1680,26 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2CpxVwHMTENL"
+        "id": "2CpxVwHMTENL",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "035b0627-6cc4-45f3-ebd8-c2fca213647f"
       },
       "source": [
-        "metin = \"Python Programlama Dili\"\n"
+        "metin = \"Python Programlama Dili\"\n",
+        "print(\"Python\"in metin)\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "True\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1587,7 +1729,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "dOa6Pu2CPpW7"
+        "id": "dOa6Pu2CPpW7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1592fb67-7643-4cac-8b90-2366ea39b48c"
       },
       "source": [
         "# Örnek uygulamayı çalıştır\n",
@@ -1595,8 +1741,16 @@
         "metin = \"Python programlama dili\"\n",
         "print(len(metin)) "
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "23\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1617,7 +1771,7 @@
         "\n",
         "# Çıktı: Python programlama dili, dünyada eğitim amacıyla en"
       ],
-      "execution_count": null,
+      "execution_count": 46,
       "outputs": []
     },
     {
@@ -1655,7 +1809,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "GopY-yJSQ8Z_"
+        "id": "GopY-yJSQ8Z_",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "63d0ba57-d315-485b-ae80-54a3afa2c4a0"
       },
       "source": [
         "# Örnek uygulamayı çalıştır\n",
@@ -1663,8 +1821,16 @@
         "metin = 'Önümüzdeki ay \"Ankara\\'da Python Eğitimi\" gerçekleştirilecektir.'\n",
         "print(metin)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Önümüzdeki ay \"Ankara'da Python Eğitimi\" gerçekleştirilecektir.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1692,14 +1858,26 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "A8Gpec2uVhxU"
+        "id": "A8Gpec2uVhxU",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e4a665dd-662a-4b76-b8c6-bd335e525e3f"
       },
       "source": [
-        "metin = 'Bilimsel çalışmalarda \"Python\" kullanımı Türkiye'de çok yaygınlaştı!'\n",
+        "metin = 'Bilimsel çalışmalarda \"Python\" kullanımı Türkiye\\'de çok yaygınlaştı!'\n",
         "print(metin)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Bilimsel çalışmalarda \"Python\" kullanımı Türkiye'de çok yaygınlaştı!\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1737,7 +1915,44 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "x6OiDHydSKra"
+        "id": "nEhbrgTiSAlX"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "j38fMcivSAfY"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2Lg1sMyzSAXK"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "x6OiDHydSKra",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3f374ff2-bb5e-4c5b-bbd8-70d35bafc449"
       },
       "source": [
         "# Örnek uygulamayı çalıştır\n",
@@ -1747,8 +1962,18 @@
         "print(metin.upper())\n",
         "print(metin.capitalize())"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "python programlama dili\n",
+            "PYTHON PROGRAMLAMA DILI\n",
+            "Python programlama dili\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1762,16 +1987,35 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "XfaN4psBV8wr"
+        "id": "XfaN4psBV8wr",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0df58a59-9e7b-4a62-aa52-a4559da946b2"
       },
       "source": [
         "anahtarKelime = \"Makine Öğrenmesi\"\n",
         "arananKelime = \"makine öğrenmesi\"\n",
         "\n",
-        "print(anahtarKelime == arananKelime) # Çıktı: True"
+        "anahtar = anahtarKelime.upper()\n",
+        "print(anahtar)\n",
+        "aranan = arananKelime.upper()\n",
+        "print(aranan)\n",
+        "print(anahtar == aranan)\n",
+        " # Çıktı: True"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "MAKINE ÖĞRENMESI\n",
+            "MAKINE ÖĞRENMESI\n",
+            "True\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1809,7 +2053,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "L1lvJBIVSzRK"
+        "id": "L1lvJBIVSzRK",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9be6b4dd-0db9-4c0a-ca14-50d5823a5222"
       },
       "source": [
         "# Örnek uygulamayı çalıştır\n",
@@ -1820,13 +2068,26 @@
         "print(\"Merhaba, ben %s!\" % adsoyad)\n",
         "print(\"Ben %d doğumluyum\" % dogumTarihi)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Merhaba, ben Orçun Madran!\n",
+            "Ben 1976 doğumluyum\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "YEhvVmn0TAlx"
+        "id": "YEhvVmn0TAlx",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "27c109ce-d6a5-461d-8165-b49babdbe0d3"
       },
       "source": [
         "# Örnek uygulamayı çalıştır\n",
@@ -1836,8 +2097,16 @@
         "\n",
         "print(\"Merhaba, ben %s %s!\" % (ad, soyad))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Merhaba, ben Orçun Madran!\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1851,17 +2120,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HxYY3XqGWYsi"
+        "id": "HxYY3XqGWYsi",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "acb27a8f-7a33-48c7-c511-bf763ead67e0"
       },
       "source": [
         "ad = \"Orçun\"\n",
         "soyad = \"Madran\"\n",
         "ders = \"Programlama Dilleri\"\n",
-        "\n",
+        "print(\"Merhaba %s %s, bu dönemki dersiniz ' %s'. Başarılar!\" % (ad, soyad, ders))\n",
         "# Çıktı: Merhaba Orçun Madran, bu dönemki dersiniz \"Programlama Dilleri\". Başarılar!"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Merhaba Orçun Madran, bu dönemki dersiniz ' Programlama Dilleri'. Başarılar!\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
