Fonksiyonlara kadar tamamlandı.

--- a/BBY162_Python_a_Giris.ipynb
+++ b/BBY162_Python_a_Giris.ipynb
@@ -1783,7 +1783,7 @@
         "\n",
         "# Çıktı: Python programlama dili, dünyada eğitim amacıyla en\n"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3031,7 +3031,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "XMHB4_dY3B1v"
+        "id": "XMHB4_dY3B1v",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "42f05ea0-7b97-44f2-baa1-ae0cf16f678d"
       },
       "source": [
         "#Sistemde yer alan bilgiler:\n",
@@ -3042,6 +3046,10 @@
         "girKulAdi = input(\"Kullanıcı Adı: \")\n",
         "girKulSifre = input(\"Şifre: \")\n",
         "\n",
+        "girKulAdi = \"yonetici\"\n",
+        "girKulSifre = \"bby162\"\n",
+        "print(sisKulAdi == girKulAdi and sisKulSifre == girKulSifre)\n",
+        "\n",
         "\n",
         "\n",
         "\n",
@@ -3049,11 +3057,20 @@
         "#Kontrol\n",
         "\n",
         "\n",
-        "#Sonuç\n",
-        "print(sonuc)"
+        "#Sonuç\n"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Kullanıcı Adı: yonetici\n",
+            "Şifre: bby162\n",
+            "True\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3131,7 +3148,13 @@
         "    \"Açık Erişim\" : \"Kamu kaynakları ile yapılan araştırmalar sonucunda üretilen yayınlara ücretsiz erişim\" ,\n",
         "    \"Açık Veri\" : \"Kamu kaynakları ile yapılan araştırma sonucunda üretilen verilere ücretsiz ve yeniden kullanılabilir biçimde erişim\" \n",
         "    }\n",
+        "\n",
         "anahtar = input(\"Anahtar Kelime: \")\n",
+        "if anahtar in acikSozluk :\n",
+        "  print(\"Bilimsel bilgi kamu malıdır. Bilimsel yayınlara ve verilere açık erişim bir haktır.\")\n",
+        "\n",
+        "else: \n",
+        "    print(\"Sözlükte yok\")\n",
         "\n",
         "\n",
         "#If"
@@ -3175,7 +3198,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "hVT2r9_tbnis"
+        "id": "hVT2r9_tbnis",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4380f91d-34e9-40f2-cab9-b2c794b0d461"
       },
       "source": [
         "# Örnek uygulamayı çalıştır\n",
@@ -3192,7 +3219,16 @@
         "  print(\"Kayıtlı bir gün bilgisi girmediniz!\")"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Gün giriniz: Cuma\n",
+            "Bilimsel İletişim\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3210,14 +3246,41 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "vEFr1ub_thtK"
+        "id": "vEFr1ub_thtK",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2d91108a-4b68-46bd-c19d-dd36ac5f3700"
       },
       "source": [
-        "yas = int(input(\"Yaşınızı giriniz: \"))\n",
+        "yas = input(\"Yaşınızı giriniz: \")\n",
+        "if (yas.isdigit()):\n",
+        "  yas = int(yas)\n",
+        "  if (yas< 21 or yas > 64): \n",
+        "   print( \"Sokağa çıkma yasağı bulunmaktadır!\")\n",
+        "  else: \n",
+        "      print(\"Sokağa çıkma yasağı yoktur!\")\n",
+        "else:\n",
+        "  print(\"Yaşınızı rakam olarak giriniz!\")\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
         "\n"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Yaşınızı giriniz: 21\n",
+            "Sokağa çıkma yasağı yoktur!\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3272,7 +3335,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZIm4g511cyvz"
+        "id": "ZIm4g511cyvz",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "72946275-0b8e-47a9-e6ac-d5946c98191c"
       },
       "source": [
         "# Örnek uygulmayı çalıştır\n",
@@ -3281,12 +3348,28 @@
         "    print(i)"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Uikl2CnDc8rE"
+        "id": "Uikl2CnDc8rE",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f849bf1c-bc1f-4d31-ea57-29d348625c1a"
       },
       "source": [
         "# Örnek uygulmayı çalıştır\n",
@@ -3297,7 +3380,17 @@
         "    print(konu)"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Açık Bilim\n",
+            "Açık Erişim\n",
+            "Açık Veri\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3314,7 +3407,10 @@
         "id": "ry1L7GJ_J_wZ"
       },
       "source": [
-        "#liste\n"
+        "#liste\n",
+        "listeler = [\"Bilgi Hizmetleri\",\"Bilgi Erişim\",\"Bilginin Düzenlenmesi\"]\n",
+        "for liste in listeler\n",
+        "    print(liste)  "
       ],
       "execution_count": null,
       "outputs": []
@@ -3374,13 +3470,95 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "83a-E21mMEUr"
+        "id": "83a-E21mMEUr",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8ac5890b-ed1f-4e1f-c919-824eddec5746"
       },
       "source": [
-        "#degisken\n"
+        "#degisken\n",
+        "karantina = \"29 Nisan perşembe gününden 17 Mayıs'a kadar tam kapanma sürecektir.\"\n",
+        "\n",
+        "for harf in karantina:\n",
+        "  print(harf)"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2\n",
+            "9\n",
+            " \n",
+            "N\n",
+            "i\n",
+            "s\n",
+            "a\n",
+            "n\n",
+            " \n",
+            "p\n",
+            "e\n",
+            "r\n",
+            "ş\n",
+            "e\n",
+            "m\n",
+            "b\n",
+            "e\n",
+            " \n",
+            "g\n",
+            "ü\n",
+            "n\n",
+            "ü\n",
+            "n\n",
+            "d\n",
+            "e\n",
+            "n\n",
+            " \n",
+            "1\n",
+            "7\n",
+            " \n",
+            "M\n",
+            "a\n",
+            "y\n",
+            "ı\n",
+            "s\n",
+            "'\n",
+            "a\n",
+            " \n",
+            "k\n",
+            "a\n",
+            "d\n",
+            "a\n",
+            "r\n",
+            " \n",
+            "t\n",
+            "a\n",
+            "m\n",
+            " \n",
+            "k\n",
+            "a\n",
+            "p\n",
+            "a\n",
+            "n\n",
+            "m\n",
+            "a\n",
+            " \n",
+            "s\n",
+            "ü\n",
+            "r\n",
+            "e\n",
+            "c\n",
+            "e\n",
+            "k\n",
+            "t\n",
+            "i\n",
+            "r\n",
+            ".\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3415,7 +3593,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "GTRNt3f4dxaZ"
+        "id": "GTRNt3f4dxaZ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ca75c776-b768-4a32-9d58-7730d82dacfa"
       },
       "source": [
         "# Örnek uygulamayı çalıştır\n",
@@ -3429,7 +3611,25 @@
         "print(\"Program bitti\")"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n",
+            "7\n",
+            "8\n",
+            "9\n",
+            "10\n",
+            "Program bitti\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3464,7 +3664,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xXDmHHe2TVLJ"
+        "id": "xXDmHHe2TVLJ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "898fa26d-16ac-4da2-afcb-2b59ee37eb51"
       },
       "source": [
         "# Örnek Uygulamayı çalıştır\n",
@@ -3478,7 +3682,19 @@
         "        break"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3510,7 +3726,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8kRu3DpFT4pe"
+        "id": "8kRu3DpFT4pe",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "82c8d7d7-afa5-45ab-bee2-493bf0d6eba9"
       },
       "source": [
         "# Örnek Uygulamayı çalıştır\n",
@@ -3521,7 +3741,18 @@
         "    print(i)"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "4\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3542,7 +3773,14 @@
       "source": [
         "#Tahmin Oyunu\n",
         "kelime = \"bilgi\"\n",
-        "tahmin = \"\""
+        "tahmin = \"\"\n",
+        "tahmin = input(\"Tahmininizi yazınız :\")\n",
+        "while tahmin :\n",
+        "  if tahmin in kelime :\n",
+        "    print(\"Tebrikler, Bildiniz !\")\n",
+        "  else:\n",
+        "      print(\"Tekrar deneyin.\")\n",
+        "  break "
       ],
       "execution_count": null,
       "outputs": []
