--- a/BBY162_Python_a_Giris.ipynb
+++ b/BBY162_Python_a_Giris.ipynb
@@ -3499,9 +3499,10 @@
       "source": [
         "def karsila(kAd, kSoyad):\n",
         "  print(\"Hoşgeldin, %s %s\" % (kAd, kSoyad))\n",
+        "  karsila(\"Songül\",\"Artan\")\n",
         "\n"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
